fix(QBtnDropdown): remove spacing between main button and split when outline #8594 #8603

--- a/ui/src/components/btn-dropdown/QBtnDropdown.sass
+++ b/ui/src/components/btn-dropdown/QBtnDropdown.sass
@@ -1,7 +1,8 @@
 .q-btn-dropdown
   &--split .q-btn-dropdown__arrow-container
-    border-left: 1px solid rgba(255,255,255,.3)
     padding: 0 4px
+    &:not(.q-btn--outline)
+      border-left: 1px solid rgba(255,255,255,.3)
 
   &--simple * + .q-btn-dropdown__arrow
     margin-left: 8px
